stylesheet/style.css
#nav{
    padding-left: 7.5%;
    padding-right: 7.5%;
    padding-top: 3.5%;
    align-items: center;
    background: #FFFFFF;
}

#menu{
    padding: 10%;
    background: #FFFFFF;
}

#menuContainer{
    padding-left: 7.5%;
    padding-right: 7.5%;
    background-color: red;
    background: #FFFFFF;
}

#infoQuestion{
    background: #92E3A9;
}

#infoAnswers{
    background: #92E3A9;
}

#feedback{
    background: #FFFFFF;
    box-shadow: 0px 10px 30px rgba(38, 50, 56, 0.2);
    border-radius: 5px;
    margin-top: 5%;
    margin-bottom: 5%;
}

#social{
    background: #263238;
}

#copyright{
    background: #263238;
    text-align: center;
    font-family: Merriweather;
    font-style: normal;
    font-weight: 300;
    font-size: 15px;
    line-height: 121.1%;
    text-align: center;
    color: #FFFFFF;

}

#plangeriText{
    font-family: Merriweather !important;
    font-size: 16px !important;
    font-style: normal !important;
    font-weight: 700 !important;
    line-height: 20px !important;
    letter-spacing: 0em !important;
}

.bigFont{
    font-family: Merriweather;
    font-size: 40px;
    font-style: normal;
    font-weight: 900;
    line-height: 48px;
    letter-spacing: 0em;
    text-align: left;
    padding-right: 10%;  
}

.smallFont{
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 300;
    line-height: 19px;
    letter-spacing: 0em;
    text-align: left;

}

.formF{
    font-family: Merriweather;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 20px;
    letter-spacing: 0em;
    text-align: left;
}

.formL{
    font-family: Merriweather;
    font-size: 29px;
    font-style: normal;
    font-weight: 700;
    line-height: 35px;
    letter-spacing: 0em;
    text-align: left;
    margin: 4%;
    width: 60%;

}
.formS{
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 300;
    line-height: 19px;
    letter-spacing: 0em;
    text-align: left;
    margin: 4%;
    width: 60%
}

.bigNums{
    font-family: Merriweather;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 48px;
    letter-spacing: 0em;
    text-align: center;
    color: #92E3A9;
    background-color: #263238;
    border-radius: 5px;
    height:50px;
    width: 50px;
    float: left;
    
}
.darkButton{
    background-color: #263238;
    border-radius: 5px;
    font-family: Merriweather;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 20px;
    letter-spacing: 0em;
    text-align: center;
    color: #92E3A9;
    width: 100%;

}

.lightButton{
    background: #92E3A9;
    border-radius: 5px;
    font-family: Merriweather;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 20px;
    letter-spacing: 0em;
    text-align: center;
    width: 100%;
}

.socialshare{
    display:flex;
    justify-content: center;
    align-items: center;
}

.modal-title{
    background-color: #92E3A9;
}

